Closed Bug 1559866 Opened 5 years ago Closed 5 years ago

[socket process] Cancel the transaction if HttpTransactionChild::InitInternal failed

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: kershaw, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 obsolete file)

Blocks: socket-proc

There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:kershaw, could you have a look please?
For more information, please visit auto_nag documentation.

Flags: needinfo?(kershaw)
Status: NEW → RESOLVED
Closed: 5 years ago
Flags: needinfo?(kershaw)
Resolution: --- → FIXED
Attachment #9085015 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: