Bug 1559866 - Cancel the channel when we fail to initializa the transaction, r=dragana